purchase and sales invoice,vendetails alignment issue changes

--- a/src/app/templates/modules/employee/components/employee-list/employee-list.component.scss
+++ b/src/app/templates/modules/employee/components/employee-list/employee-list.component.scss
@@ -163,10 +163,10 @@ input[type=search] {
 .fa-filter{
   margin-left: 20px;
 }
-::ng-deep .mat-dialog-container{
+/* ::ng-deep .mat-dialog-container{
   padding: 0px !important;
   margin: -90px 0px 0px -140px;
-}
+} */
 .employee-class .modal-dialog {
   width: 100% !important;
   height: 15% !important;
